ISSUE #1117 - Fixed the padding on the right in the chips filter to not overlap with the collapse arrow

--- a/frontend/components/panel/css/panel.css
+++ b/frontend/components/panel/css/panel.css
@@ -209,10 +209,10 @@ panel-card-chips-filter input {
 panel-card-chips-filter .collapse-button {
   position: absolute;
   top: 45px;
-  right: 0px;
+  right: -2px;
 }
 
-panel-card-chips-filter md-chips md-chips-wrap {
+panel-card-chips-filter md-chips-wrap.md-chips {
   padding-right: 35px;
 }
 
